# ai-api-unified

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  env_template  publish.sh  pyproject.toml
.agents/memory/adr/: ADR-0001-lazy-provider-loading.md  ADR-0002-middleware-yaml-driven.md  ADR-0003-two-middleware-roles.md  ADR-0004-tool-calling-abstraction.md  ADR-0005-google-api-key-auth-default.md  ADR-0006-video-sync-api-over-async-jobs.md  ADR-0007-video-file-backed-artifacts.md  ADR-0008-video-explicit-engine-selection.md  ADR-0009-replace-the-blended-token-rate-with-a-structured-per-modality-decimal-typed-pricing-descriptor.md  ADR-0010-store-pricing-in-a-versioned-registry-keyed-by-provider-and-model-separate-from-model-classes-with-per-entry-provenance.md  ADR-0011-compute-cost-from-real-provider-reported-token-usage-and-split-rates-deprecating-the-blended-calculate-cost-for-one-release.md  ADR-0012-generalize-the-single-observability-slot-into-a-fail-open-composite-chain-so-cost-tracking-coexists-with-logging.md  ADR-0013-scope-finops-cost-tracking-to-observe-only-budgets-and-enforcement-are-a-separate-downstream-layer-over-the-event-stream.md  ADR-0014-emit-per-call-cost-events-carrying-pricing-provenance-to-a-pluggable-sink-with-no-in-library-aggregation.md  ADR-0015-implement-finops-v1-as-config-gated-cost-enrichment-inside-the-existing-observability-middleware-deferring-the-composite-chain.md  ADR-0016-emit-v1-cost-events-on-a-dedicated-cost-log-topic-with-pricing-provenance-deferring-the-pluggable-cost-sink-to-phase-2.md  ADR-0017-normalize-provider-cache-read-tokens-into-a-uniform-cached-input-subset-and-bill-it-at-the-cached-rate-deferring-cache-write-billing.md  ADR-0018-expose-caller-managed-single-turn-tool-use-and-structured-output-on-the-completions-abstraction-amending-adr-0004.md  INDEX.md
.agents/memory/daily/2026-04-03/: summary.md
.agents/memory/daily/2026-04-18/: summary.md
.agents/memory/daily/2026-04-19/: summary.md
.agents/memory/daily/2026-07-02/: summary.md
.agents/memory/daily/2026-07-03/: summary.md
.agents/memory/daily/2026-07-06/: summary.md
.agents/memory/daily/2026-07-07/: summary.md
.agents/memory/daily/2026-07-08/: summary.md
.agents/memory/daily/2026-07-18/: summary.md
.codex/local/: last-notify-payload.json
docs/: conditional-dependencies-best-practices.md  finops_middleware_design.md  issue_conditional_dependencies.md  middleware-extensibility-pattern-pii-poc.md  observability_middleware_design.md  observability_middleware_example.yaml  observability_middleware_implementation_plan.md  observability_middleware_test_plan.md  pii_redaction_design.md  pricing_research.md  tool_calling_specification.md  video_generation_design.md  video_generation_implementation_plan.md
scripts/: run_impacted_tests.py
src/ai-api/: ai_base.py  ai_factory.py
src/ai-api/completions/: ai_nova_completions.py  ai_openai_completions.py
src/ai-api/embeddings/: ai_openai_embeddings.py  ai_titan_embeddings.py
src/ai-api/util/: env_settings.py
src/ai_api/: __init__.py  __version__.py  ai_base.py
src/ai_api/completions/: ai_bedrock_completions.py  ai_openai_completions.py
src/ai_api/embeddings/: ai_titan_embeddings.py
src/ai_api/util/: __init__.py  env_settings.py
src/ai_api_unified/: __init__.py  __version__.py  ai_anthropic_base.py  ai_base.py  ai_bedrock_base.py  ai_completions_exceptions.py  ai_factory.py  ai_google_base.py  ai_openai_base.py  ai_provider_exceptions.py  ai_provider_loader.py  ai_provider_registry.py
src/ai_api_unified/completions/: __init__.py  ai_anthropic_completions.py  ai_bedrock_completions.py  ai_google_gemini_capabilities.py  ai_google_gemini_completions.py  ai_openai_completions.py  ai_openai_responses_completions.py
src/ai_api_unified/embeddings/: __init__.py  ai_google_gemini_embeddings.py  ai_openai_embeddings.py  ai_titan_embeddings.py  ai_voyage_embeddings.py
src/ai_api_unified/images/: __init__.py  ai_bedrock_images.py  ai_google_gemini_images.py  ai_openai_images.py
src/ai_api_unified/middleware/: __init__.py  middleware.py  middleware_config.py  observability.py  observability_runtime.py  pii_redactor.py  redaction_exceptions.py
src/ai_api_unified/middleware/impl/: _presidio_redactor.py  base_redactor.py  noop_redactor.py  (+3 more)
src/ai_api_unified/pricing/: __init__.py  model_pricing.py  pricing_registry.py
src/ai_api_unified/util/: __init__.py  _lazy_pydub.py  env_settings.py  package_metadata_validation.py  utils.py
src/ai_api_unified/videos/: __init__.py  ai_bedrock_videos.py  ai_google_gemini_videos.py  ai_openai_videos.py  frame_helpers.py
src/ai_api_unified/voice/: __init__.py  ai_voice_azure.py  ai_voice_base.py  ai_voice_elevenlabs.py  ai_voice_factory.py  ai_voice_google.py  ai_voice_google_gemini_voices.py  ai_voice_openai.py  audio_models.py
tests/: area_map.py  conftest.py  test_ai_api.py  test_ai_base_videos.py  test_ai_factory_provider_loading.py  test_ai_provider_loader.py  test_ai_provider_registry.py  test_ai_voice_factory_provider_loading.py  test_anthropic_batches.py  test_anthropic_completions.py  test_audio_dependency_isolation.py  test_cached_token_capture.py  test_clients.py  test_completions_conversation_api.py  test_completions_streaming.py  test_custom_recognizer_registration.py  test_embeddings_capabilities.py  test_env_settings.py  test_estimate.py  test_finops_cost_observability.py  test_frame_helpers.py  test_google_gemini.py  test_google_gemini_nonmock.py  test_google_gemini_videos.py  test_image_generation_files.py  test_image_input_completions.py  test_middleware_config.py  test_middleware_extensibility_poc.py  test_model_pricing.py  test_model_switch_nonmock.py  test_multi_engine_conversation_api.py  test_nova_canvas_image.py  test_nova_reel_videos.py  test_observability_completions_phase_c.py  test_observability_docs_release_phase_h.py  test_observability_embeddings_phase_d.py  test_observability_images_phase_e.py  test_observability_log_cleanup_phase_g.py  test_observability_middleware_phase_a.py  test_observability_shared_runtime.py  (+14 more)
(+35 files in other folders)
