[project]
name = "ai_api"
version = "0.0.0"
description = "Foundation model access library"
readme = "README.md"
requires-python = ">=3.9"

# ---- Dependencies ----
dependencies = [
    # Core
    "pydantic>=2",
    "pydantic-settings>=2",
    "tiktoken>=0.5.1",

    # NEW – referenced in src/
    "openai>=1.25.0",      # new OpenAI client (uses httpx internally)
    "boto3>=1.34.0",       # AWS SDK
    "botocore>=1.34.0",    # boto3 pins but listing keeps dependabot happy
    "httpx>=0.27.0",       # direct HTTP calls in ai_openai_embeddings.py
    "pandas>=2.2.0"        # dataframe utilities in completions code
]

# Optionally, keep test-only tools separate
[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts     = "-ra -q"
testpaths   = ["tests"]
python_files = ["test_*.py"]
norecursedirs = [".git", ".tox", ".venv", "build", "dist"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
