###############################################################################
#             ai_api_unified • unified access layer for AI providers#
###############################################################################
###############################################################################
# Supported Poetry Commands for this Project
#
# Setup & Installation
#   poetry install              # Install runtime dependencies
#   poetry install --with dev   # Install runtime + dev dependencies (pytest, ruff, black)
#   poetry install --all-extras # Install all optional provider dependencies
#
# Development & Testing
#   poetry run pytest            # Run the test suite (configured via [tool.pytest.ini_options])
#   poetry run pytest -q         # Run tests quietly
#   poetry run pytest -k "name"  # Run only tests matching a substring
#   poetry run pytest -m nonmock # Run only live, non-mocked provider tests
#   poetry run pytest -m "not nonmock"
#     Run regular tests only (exclude live, non-mocked provider tests)
#   poetry run pytest --aiprovider=openai or google-gemini or whatever
#     Run tests with custom --aiprovider parameter
#
# Code Quality
#   poetry run ruff check .      # Run ruff linter
#   poetry run black .           # Run code formatter
#
# Packaging
#   poetry build                 # Build the package (wheel + sdist)
# Publishing 
#   ./publish.sh                 # Clean, build, validate metadata, and publish
#   poetry publish               # Publish prebuilt artifacts after validation
# Environment
#   poetry shell                 # Spawn a shell within the virtualenv
#   poetry run <cmd>             # Run any command inside the Poetry virtualenv
#
###############################################################################
[project]
name = "ai_api_unified"

version = "2.5.4" # keep in sync with src/ai_api_unified/__version__.py
description = "Unified access layer for AI completions (LLM), embedding (semantic), image, video, and voice services"
authors = [{ name = "Dave Thomas", email = "davidcthomas@gmail.com" }]
license = "MIT"
readme = "README.md"
keywords = [
  "llm",
  "openai",
  "bedrock",
  "gemini",
  "vertex",
  "embeddings",
  "completion",
  "video",
  "voice",
  "api",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

requires-python = ">=3.11,<3.14"

dependencies = [
  # runtime deps
  "pydantic>=2,<3",
  "pydantic-settings>=2,<3",
  "httpx>=0.27.0,<1.0.0",
  "PyYAML>=6.0.1,<7.0.0",
  "pydub>=0.25.1,<0.26.0",
  "audioop-lts>=0.2.0; python_version >= '3.13'",
  # Optional provider and middleware dependencies are installed via
  # [project.optional-dependencies] below (for example
  # using poetry add 'ai-api-unified[google_gemini]').
]

[project.optional-dependencies]
dev = ["pytest>=8.4.0,<9.0.0", "ruff>=0.4.4,<1.0.0", "black>=24.4.2,<25.0.0"]
openai = ["openai>=1.25.0,<2.0.0"]
azure_tts = ["azure-cognitiveservices-speech>=1.37.0,<2.0.0"]
bedrock = ["boto3>=1.34.0,<2.0.0"]
elevenlabs = ["elevenlabs>=2.3.0,<3.0.0"]
google_gemini = [
  "google-cloud-speech>=2.25.0,<3.0.0",
  "protobuf>=3.20.2,<5.0.0dev",
  "googleapis-common-protos>=1.63.0,<2.0.0",
  "google-genai (>=1.41.0,<2.0.0)",
  "google-cloud-texttospeech (>=2.29.0)",
]
middleware-pii-redaction = [
  "presidio-analyzer>=2.2.35",
  "presidio-anonymizer>=2.2.35",
  "spacy>=3.4.4,!=3.7.0,<4.0.0",
  "usaddress>=0.5.16,<0.6.0",
]
# Compatibility aliases retained so existing install commands keep working.
middleware-pii-redaction-small = [
  "presidio-analyzer>=2.2.35",
  "presidio-anonymizer>=2.2.35",
  "spacy>=3.4.4,!=3.7.0,<4.0.0",
  "usaddress>=0.5.16,<0.6.0",
]
middleware-pii-redaction-large = [
  "presidio-analyzer>=2.2.35",
  "presidio-anonymizer>=2.2.35",
  "spacy>=3.4.4,!=3.7.0,<4.0.0",
  "usaddress>=0.5.16,<0.6.0",
]
similarity_score = ["numpy==2.2.6"]
video_frames = [
  "imageio>=2.37.0,<3.0.0",
  "imageio-ffmpeg>=0.6.0,<1.0.0",
  "Pillow>=11.0.0,<12.0.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
markers = [
  "nonmock: tests that call live provider APIs and require credentials",
  "integration: broader integration-style tests that may require optional extras or external services",
]
# tell pytest to look in tests directory
testpaths = ["tests"]
python_files = ["test_*.py"]
norecursedirs = [".git", ".tox", ".venv", "build", "dist"]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Poetry-specific settings must go under [tool.poetry]
[tool.poetry]
# Not required, but it helps keep the team in sync on the same version of Poetry.
requires-poetry = ">=2.0,<2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

# ─── Tell Poetry where your package lives ────────────────────────────────────
[[tool.poetry.packages]]
include = "ai_api_unified" # the import path your tests use
from = "src"               # relative folder containing the package
